err.txt
warning: unused import: `bitflags::bitflags`
 --> crates\fantasmagorie\src\core\types.rs:1:5
  |
1 | use bitflags::bitflags;
  |     ^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `VecDeque`
 --> crates\fantasmagorie\src\core\context.rs:1:33
  |
1 | ...p, VecDeque};
  |       ^^^^^^^^

warning: unused import: `super::core::types::Color`
 --> crates\fantasmagorie\src\widgets\mod.rs:1:5
  |
1 | use super::core::types::Color;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused variable: `store`
  --> crates\fantasmagorie\src\render\renderer.rs:25:50
   |
25 | ...t, store: &...
   |       ^^^^^ help: if this is intentional, prefix it with an underscore: `_store`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: `fantasmagorie` (lib) generated 4 warnings (run `cargo fix --lib -p fantasmagorie` to apply 4 suggestions)
    Checking sandbox v0.1.0 (E:\Projects\FantasmagorieRust\crates\sandbox)
error[E0432]: unresolved import `winit::window::WindowBuilder`
 --> crates\sandbox\src\main.rs:3:5
  |
3 | use winit::window::WindowBuilder;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no `WindowBuilder` in `window`
  |
help: consider importing this struct instead
  |
3 - use winit::window::WindowBuilder;
3 + use fantasmagorie::widgets::window::WindowBuilder;
  |

warning: unused import: `glutin::context::NotCurrentGlContext`
 --> crates\sandbox\src\main.rs:4:5
  |
4 | use glutin::context::NotCurrentGlContext;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `glutin::display::GetGlDisplay`
 --> crates\sandbox\src\main.rs:5:5
  |
5 | use glutin::display::GetGlDisplay;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `raw_window_handle::HasRawWindowHandle`
 --> crates\sandbox\src\main.rs:7:5
  |
7 | use raw_window_handle::HasRawWindowHandle;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::num::NonZeroU32`
 --> crates\sandbox\src\main.rs:8:5
  |
8 | use std::num::NonZeroU32;
  |     ^^^^^^^^^^^^^^^^^^^^

warning: unused import: `fantasmagorie::render::renderer::Renderer`
  --> crates\sandbox\src\main.rs:11:5
   |
11 | use fantasmagorie::render::renderer::Renderer;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: use of deprecated trait `raw_window_handle::HasRawWindowHandle`: Use `HasWindowHandle` instead
 --> crates\sandbox\src\main.rs:7:24
  |
7 | use raw_window_handle::HasRawWindowHandle;
  |                        ^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(deprecated)]` on by default

warning: use of deprecated method `winit::event_loop::EventLoop::<T>::run`: use `EventLoop::run_app` instead
  --> crates\sandbox\src\main.rs:29:16
   |
29 |     event_loop.run(move |event, elwt| {
   |                ^^^

warning: unused import: `glutin::prelude`
 --> crates\sandbox\src\main.rs:6:5
  |
6 | use glutin::prelude::*;
  |     ^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0432`.
warning: `sandbox` (bin "sandbox") generated 8 warnings
error: could not compile `sandbox` (bin "sandbox") due to 1 previous error; 8 warnings emitted
